# backupsy

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml  scheduled-backup.yml.example
backupsy/: archive.py  banner.py  cli.py  config.py  logging_utils.py  notify.py  rotation.py  runner.py
backupsy/storage/: __init__.py  base.py  s3.py
tests/: test_config.py  test_rotation.py
