[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backupsy"
version = "0.1.0"
description = "A small, dependable CLI for backing up folders to S3-compatible storage (AWS S3, Backblaze B2, MinIO) with rotation and notifications."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "backupsy contributors" }
]
keywords = ["backup", "s3", "automation", "cli", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Archiving :: Backup",
]
dependencies = [
    "boto3>=1.28",
    "PyYAML>=6.0",
    "click>=8.1",
    "requests>=2.31",
    "pyfiglet>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "moto>=4.2",
]

[project.scripts]
backupsy = "backupsy.cli:main"

[tool.setuptools.packages.find]
include = ["backupsy*"]
